--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.example'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 buildscript {
     repositories {
@@ -9,14 +9,20 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
+        maven {
+            name = 'sponge'
+            url = 'https://repo.spongepowered.org/maven'
+        }
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle.tweaker-client'
+apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
@@ -34,6 +40,18 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
+mixin {
+    // Specify "notch" or "searge" here
+    defaultObfuscationEnv notch
+    add sourceSets.main, "mixins.skyblockaddon.json"
+}
+
+jar {
+    manifest.attributes(
+            "MixinConfigs": 'mixins.skyblockaddon.json'
+    )
+}
+
 dependencies {
-     compile 'com.github.HyperiumClient:Hyperium:master-SNAPSHOT'
+    compile 'com.github.asbyth:Hyperium:ce8b1a6'
 }
