--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ targetCompatibility = 1.8
 minecraft {
     version = "1.8.9"
     tweakClass = "cc.hyperium.launch.HyperiumTweaker"
+    tweakClass = "me.shardcoder.skyblockaddon.tweaker.SkyblockAddonTweaker"
     mappings = "stable_20"
     runDir = 'run'
     makeObfSourceJar = true
